--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,14 @@
- 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  /* Sets the font size to 16px */
+  line-height: 1.6;
+  /* Sets the line-height to 1.6 */
+  background-color: #C0C0C0;
+  color: #000000;
+}
