--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --primary-color: #6f98ea;
+  --secondary-color: #7d8caa;
+}
 * {
   box-sizing: border-box;
 }
@@ -9,13 +13,23 @@ body {
   /* Sets the font size to 16px */
   line-height: 1.6;
   /* Sets the line-height to 1.6 */
-  background-color: #C0C0C0;
-  color: #000000;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
-.button-class {
-  background-color: #FF0000; /* red color */
-  border: none;
+ul {
+  list-style-stype: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+.button {
+  background-color: var(--primary-color);
+  border: 2px solid;
   color: #FFFFFF; /* white color */
   padding: 16px 32px;
   text-align: center;
@@ -25,34 +39,6 @@ body {
   margin: 4px 2px;
   -webkit-transition-duration: 0.4s;
   cursor: pointer;
-  background-color: #FFFFFF;
-  color: #000000; /* black color */
-  border: 2px solid #FF0000;
-}
-
-.pokemon-modal {
-  display: none;
-}
-
-.pokemon-modal.is-visible {
-    position: fixed;
-    padding: 20px;
-    box-sizing: border-box;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-
-    /* to show it above other content */
-    z-index: 999;
-
-    /* to allow scrolling if the screen is not high enough*/
-    overflow: auto;
-
-    /* this is used to center the modal*/
-    display: grid;
-    text-align: center;
 }
 
 .modal {
@@ -64,4 +50,14 @@ body {
   width: 100%;
   max-width: 700px;
   text-align: left;
+}
+
+.navbar {
+  background-color: #C0C0C0;
+  color: #FFFFFF;
+}
+
+.pokemon-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
