Final Touches for Styling Pokedex

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --primary-color: #6f98ea;
   --secondary-color: #7d8caa;
 }
+
 * {
   box-sizing: border-box;
 }
@@ -27,9 +28,9 @@ li {
   list-style: none;
 }
 
-.button {
-  background-color: var(--primary-color);
-  border: 2px solid;
+.button-class {
+  background-color: var(--secondary-color);
+  border: none;
   color: #FFFFFF; /* white color */
   padding: 16px 32px;
   text-align: center;
@@ -39,25 +40,13 @@ li {
   margin: 4px 2px;
   -webkit-transition-duration: 0.4s;
   cursor: pointer;
-}
-
-.modal {
-  margin: auto;
-  display: none;
-  box-sizing: border-box;
-  background: #FFF;
-  padding: 15px;
-  width: 100%;
-  max-width: 700px;
-  text-align: left;
-}
-
-.navbar {
-  background-color: #C0C0C0;
-  color: #FFFFFF;
+  width: 300px;
 }
 
 .pokemon-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
 }
